// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test of HomePage > Snapshot test: HomePage has not changed design 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="m-0 flex flex-col justify-start items-center w-full min-h-[150vh] overflow-x-hidden gap-16"
        style="box-shadow: inset 0 0 0 1000px rgba(16, 16, 16, 0.6);"
      >
        <div
          class="fixed top-0 left-0 mt-8 ml-8 w-16 h-auto z-9998"
        >
          <img
            alt="logo"
            class="cursor-pointer"
            src="/project2/src/assets/film_rateren.svg"
            style="opacity: 0; pointer-events: none;"
          />
        </div>
        <div
          class="bg-screen rounded-[0.3rem] flex flex-col justify-start items-center relative"
          style="box-shadow: 0 0 40px 1px rgba(255, 247, 238, 0.9); height: 382px; width: 700px; margin-top: 96px;"
        >
          <div
            class="absolute flex flex-row justify-center"
          >
            <img
              alt="screenContent"
              src="/project2/src/assets/medium_screen.svg"
              style="opacity: 1; height: 380px; margin-top: 0px;"
            />
          </div>
          <div
            class="absolute z-50"
            style="opacity: 1; margin-top: 250px; width: 380px; left: 165px;"
          >
            <div
              class="MuiAutocomplete-root MuiAutocomplete-variantOutlined MuiAutocomplete-colorNeutral MuiAutocomplete-sizeMd h-14 bg-white p-2 rounded css-1fr0cu4-JoyAutocomplete-root"
            >
              <div
                class="MuiAutocomplete-wrapper css-n43o-JoyAutocomplete-wrapper"
              >
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  autocapitalize="none"
                  autocomplete="off"
                  class="MuiAutocomplete-input css-1epe1tr-JoyAutocomplete-input"
                  id=":r1:"
                  placeholder="Tittel..."
                  role="combobox"
                  spellcheck="false"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="absolute z-50"
            style="opacity: 0; margin-top: 250px; left: 165px; pointer-events: none;"
          >
            <div
              class="MuiFormControl-root MuiTextField-root bg-white rounded css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
              style="width: 380px;"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r3:"
                id=":r3:-label"
              >
                Tittel...
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r3:"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Tittel...
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="absolute"
            style="opacity: 0; right: 255px; margin-top: 195px; pointer-events: none;"
          >
            <div
              class="MuiFormControl-root bg-white rounded css-b8lww7-MuiFormControl-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-i6nwqp-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                id="genreLabel"
              >
                Sjanger
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-fp7wkn-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <div
                  aria-controls=":r5:"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="genreLabel genre"
                  class="MuiSelect-select MuiSelect-outlined MuiSelect-multiple MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                  id="genre"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </div>
                <input
                  aria-hidden="true"
                  aria-invalid="false"
                  class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                  data-testid="ArrowDropDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Sjanger (kun demo)
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="absolute"
            style="opacity: 0; right: 145px; margin-top: 195px; pointer-events: none;"
          >
            <div
              class="MuiFormControl-root bg-white rounded css-pw6fgj-MuiFormControl-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-i6nwqp-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                id="sort-select-label"
              >
                Sortering
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-1drctv7-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
              >
                <div
                  aria-controls=":r7:"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="sort-select-label sort-select"
                  class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                  id="sort-select"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </div>
                <input
                  aria-hidden="true"
                  aria-invalid="false"
                  class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                  data-testid="ArrowDropDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Sortering
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="absolute z-999"
            style="margin-top: 250px; right: 300px; opacity: 0; pointer-events: none;"
          >
            <button
              class="bg-gray-700 rounded-lg text-white p-2 px-4 border-2 border-transparent cursor-pointer transition duration-250 hover:border-[rgb(41,93,227)]"
              disabled=""
              style="min-height: 0rem; width: 4rem;"
            >
              Søk
            </button>
          </div>
        </div>
        <div
          class="text-[rgba(255,247,238,0.4)] absolute top-[93%] flex flex-col justify-center items-center"
          style="opacity: 1;"
        >
          <p>
            Bla ned for avansert søk
          </p>
          <p>
            ↓
          </p>
        </div>
        <img
          alt="seats"
          src="/project2/src/assets/seats.png"
          style="opacity: 1; margin-top: 0px;"
        />
        <div
          class="absolute flex flex-wrap flex-row justify-center w-[77%] gap-14 text-white"
          style="opacity: 0; top: 525px; pointer-events: none;"
        >
          <div
            class="flex justify-center items-center w-full h-60"
          >
            <span
              class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-variantSoft MuiCircularProgress-sizeMd css-t8wayp-JoyCircularProgress-root"
              role="progressbar"
              style="--CircularProgress-percent: 25;"
            >
              <svg
                class="MuiCircularProgress-svg css-qw6zo9-JoyCircularProgress-svg"
              >
                <circle
                  class="MuiCircularProgress-track css-zitgxn-JoyCircularProgress-track"
                />
                <circle
                  class="MuiCircularProgress-progress css-v8oslq-JoyCircularProgress-progress"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      ,
    </div>
  </body>,
  "container": <div>
    <div
      class="m-0 flex flex-col justify-start items-center w-full min-h-[150vh] overflow-x-hidden gap-16"
      style="box-shadow: inset 0 0 0 1000px rgba(16, 16, 16, 0.6);"
    >
      <div
        class="fixed top-0 left-0 mt-8 ml-8 w-16 h-auto z-9998"
      >
        <img
          alt="logo"
          class="cursor-pointer"
          src="/project2/src/assets/film_rateren.svg"
          style="opacity: 0; pointer-events: none;"
        />
      </div>
      <div
        class="bg-screen rounded-[0.3rem] flex flex-col justify-start items-center relative"
        style="box-shadow: 0 0 40px 1px rgba(255, 247, 238, 0.9); height: 382px; width: 700px; margin-top: 96px;"
      >
        <div
          class="absolute flex flex-row justify-center"
        >
          <img
            alt="screenContent"
            src="/project2/src/assets/medium_screen.svg"
            style="opacity: 1; height: 380px; margin-top: 0px;"
          />
        </div>
        <div
          class="absolute z-50"
          style="opacity: 1; margin-top: 250px; width: 380px; left: 165px;"
        >
          <div
            class="MuiAutocomplete-root MuiAutocomplete-variantOutlined MuiAutocomplete-colorNeutral MuiAutocomplete-sizeMd h-14 bg-white p-2 rounded css-1fr0cu4-JoyAutocomplete-root"
          >
            <div
              class="MuiAutocomplete-wrapper css-n43o-JoyAutocomplete-wrapper"
            >
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                autocapitalize="none"
                autocomplete="off"
                class="MuiAutocomplete-input css-1epe1tr-JoyAutocomplete-input"
                id=":r1:"
                placeholder="Tittel..."
                role="combobox"
                spellcheck="false"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="absolute z-50"
          style="opacity: 0; margin-top: 250px; left: 165px; pointer-events: none;"
        >
          <div
            class="MuiFormControl-root MuiTextField-root bg-white rounded css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
            style="width: 380px;"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r3:"
              id=":r3:-label"
            >
              Tittel...
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r3:"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-yjsfm1"
                >
                  <span>
                    Tittel...
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="absolute"
          style="opacity: 0; right: 255px; margin-top: 195px; pointer-events: none;"
        >
          <div
            class="MuiFormControl-root bg-white rounded css-b8lww7-MuiFormControl-root"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-i6nwqp-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              id="genreLabel"
            >
              Sjanger
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-fp7wkn-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <div
                aria-controls=":r5:"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="genreLabel genre"
                class="MuiSelect-select MuiSelect-outlined MuiSelect-multiple MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                id="genre"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                aria-invalid="false"
                class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-yjsfm1"
                >
                  <span>
                    Sjanger (kun demo)
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="absolute"
          style="opacity: 0; right: 145px; margin-top: 195px; pointer-events: none;"
        >
          <div
            class="MuiFormControl-root bg-white rounded css-pw6fgj-MuiFormControl-root"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-i6nwqp-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              id="sort-select-label"
            >
              Sortering
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-1drctv7-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
            >
              <div
                aria-controls=":r7:"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="sort-select-label sort-select"
                class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                id="sort-select"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                aria-invalid="false"
                class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-yjsfm1"
                >
                  <span>
                    Sortering
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="absolute z-999"
          style="margin-top: 250px; right: 300px; opacity: 0; pointer-events: none;"
        >
          <button
            class="bg-gray-700 rounded-lg text-white p-2 px-4 border-2 border-transparent cursor-pointer transition duration-250 hover:border-[rgb(41,93,227)]"
            disabled=""
            style="min-height: 0rem; width: 4rem;"
          >
            Søk
          </button>
        </div>
      </div>
      <div
        class="text-[rgba(255,247,238,0.4)] absolute top-[93%] flex flex-col justify-center items-center"
        style="opacity: 1;"
      >
        <p>
          Bla ned for avansert søk
        </p>
        <p>
          ↓
        </p>
      </div>
      <img
        alt="seats"
        src="/project2/src/assets/seats.png"
        style="opacity: 1; margin-top: 0px;"
      />
      <div
        class="absolute flex flex-wrap flex-row justify-center w-[77%] gap-14 text-white"
        style="opacity: 0; top: 525px; pointer-events: none;"
      >
        <div
          class="flex justify-center items-center w-full h-60"
        >
          <span
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-variantSoft MuiCircularProgress-sizeMd css-t8wayp-JoyCircularProgress-root"
            role="progressbar"
            style="--CircularProgress-percent: 25;"
          >
            <svg
              class="MuiCircularProgress-svg css-qw6zo9-JoyCircularProgress-svg"
            >
              <circle
                class="MuiCircularProgress-track css-zitgxn-JoyCircularProgress-track"
              />
              <circle
                class="MuiCircularProgress-progress css-v8oslq-JoyCircularProgress-progress"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test of MovieCard > Snapshot test: MovieCard has not changed design 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="grid max-h-full gap-7 mt-6 ml-2 text-white italic place-items-center  "
      >
        <div
          class="text-base sm:text-medium md:text-large lg:text-xl "
        >
          <h1>
            Sample Movie
          </h1>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-4 w-2/3 mb-4   "
        >
          <div
            class="mt-6 flex justify-center md:justify-end max-w-full  "
          >
            <img
              alt="Sample Movie"
              class="w-3/4 md:w-96 h-auto "
              src="https://example.com/poster.jpg"
            />
          </div>
          <div
            class="mt-8  info text-xsmall sm:text-small md:text-small lg:text-base pl-4 "
          >
            <div
              class="mb-5"
            >
              <p
                class="mb-2"
              >
                <span
                  class="font-bold"
                >
                  Sjanger: 
                </span>
                 
                Action
              </p>
              <p
                class="mb-2"
              >
                <span
                  class="font-bold"
                >
                  Regi: 
                </span>
                 
                Director 1
              </p>
              <p
                class="mb-2"
              >
                <span
                  class="font-bold"
                >
                  Utgivelsesår: 
                </span>
                 
                2023
              </p>
              <p>
                <span
                  class="font-bold"
                >
                  Beskrivelse: 
                </span>
                 
                Sample plot of the movie.
              </p>
            </div>
            <div
              class="rating"
            >
              <p
                class="mb-2"
              >
                <span
                  class="font-bold"
                >
                  IMDB rating:
                </span>
                 
                7.5
              </p>
              <div>
                 
              </div>
              <div>
                <p>
                  <span
                    class="font-bold"
                  >
                    Average user rating:
                  </span>
                   
                  2.5
                </p>
                <div
                  class="flex text-yellow"
                >
                  <div>
                    <span>
                      ★
                    </span>
                    <span>
                      ★
                    </span>
                    <span>
                      ★
                    </span>
                    <span>
                      ☆
                    </span>
                    <span>
                      ☆
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="grid max-h-full gap-7 mt-6 ml-2 text-white italic place-items-center  "
    >
      <div
        class="text-base sm:text-medium md:text-large lg:text-xl "
      >
        <h1>
          Sample Movie
        </h1>
      </div>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-4 w-2/3 mb-4   "
      >
        <div
          class="mt-6 flex justify-center md:justify-end max-w-full  "
        >
          <img
            alt="Sample Movie"
            class="w-3/4 md:w-96 h-auto "
            src="https://example.com/poster.jpg"
          />
        </div>
        <div
          class="mt-8  info text-xsmall sm:text-small md:text-small lg:text-base pl-4 "
        >
          <div
            class="mb-5"
          >
            <p
              class="mb-2"
            >
              <span
                class="font-bold"
              >
                Sjanger: 
              </span>
               
              Action
            </p>
            <p
              class="mb-2"
            >
              <span
                class="font-bold"
              >
                Regi: 
              </span>
               
              Director 1
            </p>
            <p
              class="mb-2"
            >
              <span
                class="font-bold"
              >
                Utgivelsesår: 
              </span>
               
              2023
            </p>
            <p>
              <span
                class="font-bold"
              >
                Beskrivelse: 
              </span>
               
              Sample plot of the movie.
            </p>
          </div>
          <div
            class="rating"
          >
            <p
              class="mb-2"
            >
              <span
                class="font-bold"
              >
                IMDB rating:
              </span>
               
              7.5
            </p>
            <div>
               
            </div>
            <div>
              <p>
                <span
                  class="font-bold"
                >
                  Average user rating:
                </span>
                 
                2.5
              </p>
              <div
                class="flex text-yellow"
              >
                <div>
                  <span>
                    ★
                  </span>
                  <span>
                    ★
                  </span>
                  <span>
                    ★
                  </span>
                  <span>
                    ☆
                  </span>
                  <span>
                    ☆
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test of RatingCard > Snapshot test: RatingCard has not changed design 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class=" shadow-md rounded-md space-y-2 pb-4 w-full"
      >
        <h4
          class="md:text-base text-small text-white font-bold"
        >
          User1
        </h4>
        <div
          class="flex justify-start space-x-1"
        >
          <span
            class="md:text-2xl text:medium text-yellow"
          >
            ★
          </span>
          <span
            class="md:text-2xl text:medium text-yellow"
          >
            ★
          </span>
          <span
            class="md:text-2xl text:medium text-yellow"
          >
            ★
          </span>
          <span
            class="md:text-2xl text:medium text-lightgrey"
          >
            ★
          </span>
          <span
            class="md:text-2xl text:medium text-lightgrey"
          >
            ★
          </span>
        </div>
        <p
          class="mt-2 text-white md:text-base text-md italic"
        >
          Great movie!
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class=" shadow-md rounded-md space-y-2 pb-4 w-full"
    >
      <h4
        class="md:text-base text-small text-white font-bold"
      >
        User1
      </h4>
      <div
        class="flex justify-start space-x-1"
      >
        <span
          class="md:text-2xl text:medium text-yellow"
        >
          ★
        </span>
        <span
          class="md:text-2xl text:medium text-yellow"
        >
          ★
        </span>
        <span
          class="md:text-2xl text:medium text-yellow"
        >
          ★
        </span>
        <span
          class="md:text-2xl text:medium text-lightgrey"
        >
          ★
        </span>
        <span
          class="md:text-2xl text:medium text-lightgrey"
        >
          ★
        </span>
      </div>
      <p
        class="mt-2 text-white md:text-base text-md italic"
      >
        Great movie!
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test of SearchHitCard > Snapshot test: SearchHitCard has not changed design 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="text-white italic flex flex-col justify-center items-center"
        style="height: 20rem; width: 13rem;"
      >
        <a
          href="/project2/moviePage/1"
        >
          <h1
            class="text-center  truncate"
          >
            Sample Movie
          </h1>
          <div
            class="flex justify-center items-center h-full group"
          >
            <img
              alt="Sample Movie"
              class="max-h-full max-w-full group-hover:border-[rgb(41,93,227)] group-hover:border-2"
              src="https://example.com/poster.jpg"
              style="height: 17.8rem; max-width: 100%; border-radius: 1rem;"
            />
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="text-white italic flex flex-col justify-center items-center"
      style="height: 20rem; width: 13rem;"
    >
      <a
        href="/project2/moviePage/1"
      >
        <h1
          class="text-center  truncate"
        >
          Sample Movie
        </h1>
        <div
          class="flex justify-center items-center h-full group"
        >
          <img
            alt="Sample Movie"
            class="max-h-full max-w-full group-hover:border-[rgb(41,93,227)] group-hover:border-2"
            src="https://example.com/poster.jpg"
            style="height: 17.8rem; max-width: 100%; border-radius: 1rem;"
          />
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
